# DegradOs

./: .gitattributes  .multiboot_header.asm.swp  Cargo.toml  Makefile  README.md  oldMakefile
isofiles/boot/grub/: grub.cfg
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
