[package]
name = "degrad_os"
version = "0.1.0"
authors = ["ff"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.3.4"
multiboot2 = "0.1.0"
bitflags = "0.7.0"

[dependencies.x86]
version = "0.7.1"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
